[tool.poetry]
name = "optunaml"
version = "0.1.0"
description = ""
authors = ["k.fujii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
flake8 = "^7.0.0"
black = "^24.2.0"
notebook = "^7.1.0"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
optuna = "^3.5.0"
python-dotenv = "^1.0.1"
rdkit = "^2023.9.5"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
